@@ -1,8 +1,5 @@
 package br.com.telematica.siloapi.config;
 
-import java.util.ArrayList;
-import java.util.List;
-
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.info.BuildProperties;
@@ -12,7 +9,6 @@ import org.springframework.context.annotation.Configuration;
 import ch.qos.logback.classic.Logger;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
-import io.swagger.v3.oas.models.servers.Server;
 
 /**
  * OpenApiConfig
@@ -24,34 +20,23 @@ public class OpenApiConfig {
 	private static Logger logger = (Logger) LoggerFactory.getLogger(OpenApiConfig.class);
 
 	@Autowired
-	private BuildProperties env;
+	BuildProperties env;
 
 	@Bean
 	public OpenAPI myOpenAPI() {
-		String artifactId = env.getArtifact();
-		String groupId = env.getArtifact();
+//		String artifactId = env.getArtifact();
+//		String groupId = env.getArtifact();
 		String version = env.getVersion();
 
-		logger.info("-> Info OpenApi Config, artifactId -" + artifactId + ", groupId - " + groupId + ", version - " + version);
-
-		String urlLocal = "http://localhost:8080";
-		String urlVersion = String.format("http://localhost:8080/siloapi-%s", version);
-
-		List<Server> servers = new ArrayList<>();
-		servers.add(new Server().url(urlLocal).description("Local Environment"));
-		servers.add(new Server().url(urlVersion).description("Production Server"));
-
-		Server devServer = new Server();
-		devServer.setUrl(urlLocal);
-		devServer.setDescription("Server URL in Development environment");
-
-		Server prodServer = new Server();
-		prodServer.setUrl(urlVersion);
-		prodServer.setDescription("Server URL in Production environment");
+//		logger.info("-> Info OpenApi Config, artifactId -" + artifactId);
+//		logger.info("-> Info OpenApi Config, groupId - " + groupId);
+		logger.info("-> Info OpenApi Config, version - " + version);
 
 		Info info = new Info().title("Silo API").version(version).description("Silo Api backend.");
 
-		return new OpenAPI().info(info).servers(List.of(devServer, prodServer));
+//		return new .securitySchemes(Arrays.asList(new SecurityScheme[] { new ApiKeyScheme("bearerAuth", "Authorization", "header") }))
+//				.securityContexts(Arrays.asList(new SecurityContext[] { SecurityContext.builder().securityReferences(Arrays.asList(new SecurityReference("bearerAuth", new AuthorizationScopes[] { new AuthorizationScope("global", "accessEverything") }))).forPaths(PathSelectors.any()).build() }));
+		return new OpenAPI().info(info);
 	}
 
 }
